# trident-mre

./: .gitignore  Anchor.toml  README.md
programs/trident-mre/: Cargo.toml
programs/trident-mre/src/: lib.rs
programs/trident-mre/src/instructions/: mod.rs  mxe.rs
tests/: trident-mre.ts
